// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TwoFactorAuthenticationEnforcement /> render() should render turned on/off 1`] = `
<div>
  <div
    class="mt-5 mb-5"
  >
    <h4
      class="mb-2"
    >
      <i
        class="material-icons mr-1"
      >
        lock
      </i>
      Two-Factor Authentication (2FA)
    </h4>
    <p>
      For an added layer of security, you can require your users to use two-factor authentication (2FA) when they sign in to Gorgias.
    </p>
    <div>
      <label
        aria-checked="true"
        class="ui-label-label-a11c label"
        for="twoFAEnforcementToggle"
        role="switch"
      >
        <input
          checked=""
          class="input"
          disabled=""
          id="twoFAEnforcementToggle"
          name="twoFAEnforcementToggle"
          type="checkbox"
        />
        <div
          class="slider"
        />
        Require 2FA for all users
      </label>
    </div>
    <div
      class="mt-3"
    >
      <label
        class="ui-label-label-a11c mb-2"
        for="twoFAEnforcementDatetime"
      >
        Enforcement time
        <abbr
          aria-label="required"
          class="ui-label-abbr-a11c"
          title="required"
        >
          *
        </abbr>
      </label>
      <div>
        <div
          class="wrapper"
        >
          <input
            class="input"
            data-1p-ignore="true"
            data-resizable="false"
            id="twoFAEnforcementDatetime"
            name="twoFAEnforcementDatetime"
            type="text"
            value="06/02/2023 5:34 AM"
          />
        </div>
        <div
          id="confirm-2"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TwoFactorAuthenticationEnforcement /> render() should render turned on/off 2`] = `
<div>
  <div
    class="mt-5 mb-5"
  >
    <h4
      class="mb-2"
    >
      <i
        class="material-icons mr-1"
      >
        lock
      </i>
      Two-Factor Authentication (2FA)
    </h4>
    <p>
      For an added layer of security, you can require your users to use two-factor authentication (2FA) when they sign in to Gorgias.
    </p>
    <div>
      <label
        aria-checked="false"
        class="ui-label-label-a11c label"
        for="twoFAEnforcementToggle"
        role="switch"
      >
        <input
          class="input"
          disabled=""
          id="twoFAEnforcementToggle"
          name="twoFAEnforcementToggle"
          type="checkbox"
        />
        <div
          class="slider"
        />
        Require 2FA for all users
      </label>
    </div>
  </div>
</div>
`;
